Content changes on not eligible outcome.

--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Eligible.cshtml
@@ -21,14 +21,12 @@
             </div>
 
             <h1 class="govuk-heading-l">If you think your children are eligible</h1>
-            <p>If you think that they are eligible, you'll need to find supporting evidence.</p>
-
-            <ol>
-                <li>Find supporting evidence.</li>
-                <li>Contact your childrens school(s) and send them the evidence.</li>
-                <li>The school(s) will work with your local authority to review your free school meal eligibility, then let you know the result.</li>
-            </ol>
-
+            <p>You can still apply but you'll need to:</p>
+            <ul>
+                <li>find some evidence to support your application</li>
+                <li>make an appointment to attend your children's school so they can apply on your behalf</li>
+            </ul>
+            <p>You'll need to take your evidence with you when you attend your appointment.</p>
             <details class="govuk-details">
                 <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
@@ -59,8 +57,6 @@
                 </div>
             </details>
 
-            <h2 class="govuk-heading-m">Further guidance</h2>
-            <p>More in-depth information on supporting evidence can be found in <a href="/Home/Parental_Guidance" class="govuk-link">the guidance notes for parents and guardians.</a></p>
             <p><a href="/Home/Index">Return to start</a></p>
         </div>
     </div>
